[package]
name = "wasi-import-repro"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
cc = "1"

[profile.release]
# strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
default = []
print = []
